Improved Nginx security

--- a/nginx_ssl.conf
+++ b/nginx_ssl.conf
@@ -82,6 +82,14 @@ http {
                   deny all;
           }
 
+    	  location ~ /(conf|bin|inc)/ {
+	          deny all;
+          }
+    
+          location /data/ {
+                  internal;
+          }
+
           location / {
                   # The following 2 rules are only needed with webfinger
                   rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
